# distributed-search-typeahead

./: .env.example  .gitignore  Makefile  PERFORMANCE_REPORT.md  PROJECT_EXPLAINED.md  PROJECT_REPORT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: search.py  system.py
backend/app/services/: batch_writer.py  cache.py  consistent_hash.py  metrics.py  repository.py  trending.py
backend/data/: queries.csv
backend/scripts/: benchmark.py  generate_dataset.py  smoke_test.py
backend/tests/: test_consistent_hash.py  test_metrics.py  test_schemas.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/lib/: format.test.ts  format.ts
scripts/: generate_project_report_pdf.py
